<resources>
    <string name="app_name">Fatmuscle</string>
    <string name="Bind_Email">绑定邮箱</string>
    <string name="Bind_Email_hint">请输入邮箱</string>
    <string name="Bind_Email_notic">绑定后可使用邮箱登录和找回密码</string>
    <string name="Bind_email_active">你目前绑定的邮箱：</string>
    <string name="Share_Friend">朋友圈</string>
    <string name="Share_QQ">QQ</string>
    <string name="Share_WeiBao">微博</string>
    <string name="Share_WeiXin">微信</string>
    <string name="Share_qzone">QQ空间</string>
    <string name="Share_to">分享到</string>
    <string name="abc_action_bar_home_description">转到首页</string>
    <string name="abc_action_bar_up_description">转到上一层级</string>
    <string name="abc_action_menu_overflow_description">更多选项</string>
    <string name="abc_action_mode_done">完成</string>
    <string name="abc_activity_chooser_view_see_all">查看全部</string>
    <string name="abc_activitychooserview_choose_application">选择应用</string>
    <string name="abc_capital_off">关闭</string>
    <string name="abc_capital_on">开启</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">Delete 键</string>
    <string name="abc_menu_enter_shortcut_label">Enter 键</string>
    <string name="abc_menu_function_shortcut_label">Fn+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">空格键</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">搜索…</string>
    <string name="abc_searchview_description_clear">清除查询</string>
    <string name="abc_searchview_description_query">搜索查询</string>
    <string name="abc_searchview_description_search">搜索</string>
    <string name="abc_searchview_description_submit">提交查询</string>
    <string name="abc_searchview_description_voice">语音搜索</string>
    <string name="abc_shareactionprovider_share_with">分享对象</string>
    <string name="abc_shareactionprovider_share_with_application">与%s分享</string>
    <string name="abc_toolbar_collapse_description">收起</string>
    <string name="about_us">关于我们</string>
    <string name="active_unbind">解除绑定</string>
    <string name="add_member">添加成员</string>
    <string name="add_member_limit">已超过添加成员的限制</string>
    <string name="add_pic">添加图片</string>
    <string name="age">%s岁</string>
    <string name="agree_user">同意</string>
    <string name="alter_code">获取验证码</string>
    <string name="alter_submit">提交</string>
    <string name="alter_submit_text">一个月内只允许更换一次手机号</string>
    <string name="alter_title">更换手机号</string>
    <string name="alterphone_hint">绑定手机后，可使用手机号登录和找回密码</string>
    <string name="analysis">图像解析</string>
    <string name="app_common_add_fail">添加失败</string>
    <string name="app_common_no_install">请安装此应用程序</string>
    <string name="app_common_setting_fail">设置失败</string>
    <string name="app_common_setting_success">设置成功</string>
    <string name="app_del_success">删除成功</string>
    <string name="app_delete_fail">删除失败</string>
    <string name="app_demo_name">厚度仪功能演示版</string>
    <string name="app_depth_setting">深度设置</string>
    <string name="app_device_info_device_name">设备名称</string>
    <string name="app_device_info_firmware_verson">固件版本</string>
    <string name="app_device_info_grey_leve">图像灰度</string>
    <string name="app_device_info_scanning_depth">扫描深度</string>
    <string name="app_device_info_sn">SN号</string>
    <string name="app_device_info_title">设备信息</string>
    <string name="app_device_info_type">型号</string>
    <string name="app_device_info_type_content">Z1</string>
    <string name="app_device_info_user_position">使用设置</string>
    <string name="app_device_list_delete">删除历史记录</string>
    <string name="app_device_list_dialog_delete_btn_right">删除</string>
    <string name="app_device_list_dialog_delete_title">确认删除该记录吗</string>
    <string name="app_device_list_dialog_syn_btn_right">上传</string>
    <string name="app_device_list_dialog_syn_title">确认上传该记录吗</string>
    <string name="app_dialog_ensure">好的</string>
    <string name="app_history_condition_all">显示所有记录</string>
    <string name="app_history_condition_fat">显示脂肪记录</string>
    <string name="app_history_condition_muscle">显示肌肉记录</string>
    <string name="app_history_fat_thickness">厚度</string>
    <string name="app_history_time">时间</string>
    <string name="app_history_type">类别</string>
    <string name="app_load_ing">正在加载...</string>
    <string name="app_login_cade_erro_hint">请输入验证码</string>
    <string name="app_login_email">邮箱</string>
    <string name="app_login_error_1">账号或密码错误</string>
    <string name="app_login_error_10">手机号已注册</string>
    <string name="app_login_error_11">验证码发送已超过3次，发送失败</string>
    <string name="app_login_error_12">验证码发送失败</string>
    <string name="app_login_error_13">手机号码错误，请重新输入</string>
    <string name="app_login_error_14">密码修改失败</string>
    <string name="app_login_error_15">邮件未发送</string>
    <string name="app_login_error_16">邮箱尚未验证，无法找回密码</string>
    <string name="app_login_error_17">邮箱已注册，请登录邮箱完成注册验证后重新登录APP（验证邮件已发送）</string>
    <string name="app_login_error_18">您的账号已被禁用，请联系客服</string>
    <string name="app_login_error_2">账号不存在</string>
    <string name="app_login_error_3">请填写完必要信息</string>
    <string name="app_login_error_4">网络异常，请检查网络设置</string>
    <string name="app_login_error_5">邮箱尚未验证，无法登录</string>
    <string name="app_login_error_6">邮箱尚未验证，无法登录，请登录邮箱完成注册验证</string>
    <string name="app_login_error_7">请阅读并同意使用协议</string>
    <string name="app_login_error_8">密码设置不符合规范</string>
    <string name="app_login_error_9">验证码错误</string>
    <string name="app_login_find_by_email">邮箱找回</string>
    <string name="app_login_find_by_phone">手机找回</string>
    <string name="app_login_find_now">立即找回</string>
    <string name="app_login_find_pwd">找回密码</string>
    <string name="app_login_forget_password">忘记密码？</string>
    <string name="app_login_forget_pwd">忘记密码</string>
    <string name="app_login_get_verification_code">获取验证码</string>
    <string name="app_login_haved_accout">已有账号，马上去登录</string>
    <string name="app_login_input_new_password">请输入新密码</string>
    <string name="app_login_login">登录</string>
    <string name="app_login_new_password">设置新密码</string>
    <string name="app_login_password">密码</string>
    <string name="app_login_phone">手机</string>
    <string name="app_login_phone_number">手机号</string>
    <string name="app_login_prompt_email">请输入注册过的邮箱</string>
    <string name="app_login_protocol_and_privacy">《用户协议与隐私政策》</string>
    <string name="app_login_pwd_success">提交成功，请使用新密码登录</string>
    <string name="app_login_pwd_success1">随机密码邮件已发至邮箱，请登录邮箱查看</string>
    <string name="app_login_read_agree">已阅读并同意</string>
    <string name="app_login_register">注册</string>
    <string name="app_login_register_email_success">验证邮件已发送，请登录邮箱完成注册验证后重新登录APP</string>
    <string name="app_login_register_email_success_title">注册成功</string>
    <string name="app_login_register_input_number_and_letter">6-12位数字或数字+字母</string>
    <string name="app_login_register_input_password">请输入密码</string>
    <string name="app_login_register_verfication_success">验证码短信已发送</string>
    <string name="app_login_resend">重新发送</string>
    <string name="app_login_send_security_code">获取验证码</string>
    <string name="app_login_set_password">设置新密码</string>
    <string name="app_login_success">登录成功</string>
    <string name="app_login_verification_code">验证码</string>
    <string name="app_main_dialog_ble_fimware_update_message">有新蓝牙软件版本发布，请前往升级</string>
    <string name="app_main_dialog_fimware_update_cancle">稍后再说</string>
    <string name="app_main_dialog_fimware_update_message">有新固件版本发布，请前往升级</string>
    <string name="app_main_dialog_fimware_update_ok">去升级</string>
    <string name="app_main_double_click_out">再按一次退出应用</string>
    <string name="app_main_empty_no_data">还没有记录，去测量一下吧</string>
    <string name="app_main_fat_measure">脂肪厚度仪</string>
    <string name="app_main_measure_content">将设备放置在肚脐水平的腰部位置</string>
    <string name="app_main_measure_content_disconnect">将设备数据线插入手机USB口</string>
    <string name="app_main_measure_title">请按下按键开始测量</string>
    <string name="app_main_measure_title_disconnect">请连接设备</string>
    <string name="app_main_my_about">关于我们</string>
    <string name="app_main_my_account_management">账号管理</string>
    <string name="app_main_my_check_update">检测更新</string>
    <string name="app_main_my_common_problem">常见问题</string>
    <string name="app_main_my_feedback">意见反馈</string>
    <string name="app_main_my_person">个人中心</string>
    <string name="app_main_no_firm_version_measure_title">请升级固件后进行测量</string>
    <string name="app_main_tab_curve">曲线</string>
    <string name="app_main_tab_measure">测量</string>
    <string name="app_main_tab_my">我的</string>
    <string name="app_measure_fat_thickness_value">%s厚度为 </string>
    <string name="app_measure_measure">测量中...</string>
    <string name="app_measure_no_image">无效图像</string>
    <string name="app_measure_press_tight">请按紧</string>
    <string name="app_measure_resule_bottom_bottom_content">按下操作键重新测量</string>
    <string name="app_measure_resule_bottom_comparison">%s厚度评估（%s）</string>
    <string name="app_measure_resule_bottom_title">皮下组织声像图</string>
    <string name="app_measure_resule_device_disconnect">设备已断开</string>
    <string name="app_measure_resule_distribution1">BMI正常/偏瘦</string>
    <string name="app_measure_resule_distribution2">BMI超重</string>
    <string name="app_measure_resule_distribution3">BMI肥胖</string>
    <string name="app_measure_resule_error2">请接触人体或保持垂直或涂耦合剂</string>
    <string name="app_measure_resule_error3">请接触好或微调设备手法或增加耦合剂</string>
    <string name="app_measure_resule_error4">请不要过力挤压探头</string>
    <string name="app_measure_resule_unit">单位:cm</string>
    <string name="app_member_add_setting">添加新成员</string>
    <string name="app_member_del_setting">删除成员</string>
    <string name="app_member_info_setting">个人信息</string>
    <string name="app_member_setting">成员管理</string>
    <string name="app_name_plus">肌脂仪</string>
    <string name="app_offical_network">公司官网</string>
    <string name="app_perfect_info_complete">完成</string>
    <string name="app_perfect_info_next">下一步</string>
    <string name="app_perfect_info_please_input_nickname">请输入昵称</string>
    <string name="app_perfect_info_skip">跳过》</string>
    <string name="app_perfect_info_title">完善资料</string>
    <string name="app_person_birdday">生日</string>
    <string name="app_person_height">身高</string>
    <string name="app_person_nickname">昵称</string>
    <string name="app_person_sex">性别</string>
    <string name="app_person_title">个人中心</string>
    <string name="app_person_weight">体重</string>
    <string name="app_save_fail">保存失败</string>
    <string name="app_save_ing">正在保存...</string>
    <string name="app_save_success">保存成功</string>
    <string name="app_switch_member">切换测量对象</string>
    <string name="app_syn_fail">上传失败</string>
    <string name="app_syn_success">上传成功</string>
    <string name="app_teaching_advance">进阶</string>
    <string name="app_teaching_image_recognition">图像识别</string>
    <string name="app_teaching_read">阅读</string>
    <string name="app_teaching_title">使用指南</string>
    <string name="app_teaching_useguide">操作指南</string>
    <string name="app_teaching_video_tutorial">视频教程</string>
    <string name="cancel">取消</string>
    <string name="fuzhiji_step1">第一步 确定肌肉位置</string>
    <string name="fuzhiji_step1_tip">在肚脐上方2cm至胸骨下区域寻找腹直肌</string>
    <string name="fuzhiji_title">寻找腹部腹直肌</string>
    <string name="last">上一步</string>
    <string name="manual_measure">进入测量</string>
    <string name="muscle_discover">%s探索中...</string>
    <string name="next">好了，下一步</string>
    <string name="operation">操作</string>
    <string name="save">保存</string>
    <string name="test_position">测量部位</string>
</resources>